<resources>
    <string name="app_name">Vendas</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="age">Idade</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>
    <string name="other">Outro</string>
    <string name="save">Salvar</string>
    <string name="home_hello">Olá, %s</string>
    <string name="home_new_transaction">Nova compra</string>
    <string name="home_bank_balance">R$ 0,00</string>
    <string name="home_balance_available">Saldo disponivel</string>
    <string name="home_next_invoice">Próxima fatura</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="registrar">Registrar</string>
    <string name="logo_fundatec">Logo Fundatec</string>
    <string name="transactions">Transações</string>
    <string name="account_name">Account name</string>
    <string name="account_logo">account logo</string>
    <string name="account_balance">Account balance</string>
    <string name="account_manager">Account manager</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="save_Bt">Save</string>
    <string name="clear">Clear</string>
    <string name="goback"><![CDATA[<]]></string>
    <string name="go_back">Go back</string>
    <string name="conta">Conta</string>
    <string name="manage_account">Manage account</string>
    <string name="leftarrow"><![CDATA[<]]></string>
    <string name="transaction_type">Transaction type</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="_14_57">14:57</string>
    <string name="_246_50">246.50</string>
    <string name="r_253_23">R$ 253.23</string>
    <string name="transactionsTitle">Transactions</string>
    <string name="configura_es_da_conta">Configurações da conta!</string>
    <string name="configura_es_de_cadastro">Configurações de cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="configuracoesDaConta">Configurações da conta</string>
    <string name="balance">Balance</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="nova_transa_o">Nova transação</string>
    <string name="sacar">Sacar</string>
    <string name="depositar">Depositar</string>
    <string name="valor_da_opera_o">Valor da operação</string>
    <string name="voltar">Voltar</string>

    <string-array name="operations">
        <item>Sacar</item>
        <item>Depositar</item>
    </string-array>
</resources>
