<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".account.AccountActivity">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="700dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_principal"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/ti_account_name"
            app:layout_constraintStart_toStartOf="@+id/ti_account_name"
            app:layout_constraintTop_toBottomOf="@id/ti_account_name" />

        <TextView
            android:id="@+id/tv_account_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/configuracoesDaConta"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/ti_account_name"
            app:layout_constraintEnd_toEndOf="@+id/ti_account_name"
            app:layout_constraintStart_toStartOf="@+id/ti_account_name" />

        <View
            android:id="@+id/v_separator_horizontal"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginBottom="30dp"
            android:background="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/ti_account_name"
            app:layout_constraintEnd_toEndOf="@+id/ti_account_name"
            app:layout_constraintStart_toStartOf="@id/ti_account_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="450dp"
            android:hint="@string/account_name"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_account_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:hint="@string/account_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_account_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_account_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/account_manager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_account_balance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_account_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_account_m">

            <RadioButton
                android:id="@+id/rd_account_type_credit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/credit"
                android:textColor="?attr/colorPrimaryVariant" />

            <RadioButton
                android:id="@+id/rd_account_type_debit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/debit"
                android:textColor="?attr/colorPrimaryVariant" />

        </RadioGroup>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="190dp"
            android:text="@string/save_Bt"
            app:layout_constraintLeft_toRightOf="@id/bt_balance"
            app:layout_constraintTop_toBottomOf="@+id/rg_account_type" />

        <Button
            android:id="@+id/bt_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/balance"
            app:layout_constraintLeft_toRightOf="@+id/bt_clear"
            app:layout_constraintTop_toBottomOf="@+id/rg_account_type" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/clear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_account_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>