<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/purple_700"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transaction"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/transaction_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/ic_baseline_shopping_cart_24" />

            <View
                android:id="@+id/v_separator"
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/iv_transaction"
                app:layout_constraintRight_toLeftOf="@+id/tv_transaction_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_transaction_title"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-65dp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/iv_transaction"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="@string/transaction_title" />

            <TextView
                android:id="@+id/tv_transaction_time"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/v_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_transaction_title"
                tools:text="@string/_14_57" />

            <TextView
                android:id="@+id/tv_transaction_value"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="-65dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.96"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="@string/r_253_23" />

            <ImageView
                android:id="@+id/iv_card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="260dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_baseline_credit_card_24"
                app:layout_constraintLeft_toRightOf="@+id/v_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_transaction_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</layout>